--- a/templates/forth_task/games.html
+++ b/templates/forth_task/games.html
@@ -12,6 +12,6 @@
 
 {% block content %}
 {% for i in games %}
-    <p>{{i}}</p>
+     <li>{{i}}<button>Купить</button></li>
 {% endfor %}
 {% endblock %}
